# mobile-glm

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  agent_sdk.py  phone_tool.py  preference_tool.py  pyproject.toml  scrcpy_ws_bridge.py
MobileGLM-iOS/MobileGLM/: ContentView.swift  MobileGLMApp.swift
MobileGLM-iOS/MobileGLM.xcodeproj/: project.pbxproj
MobileGLM-iOS/MobileGLM/Models/: DeviceInfo.swift
MobileGLM-iOS/MobileGLM/Networking/: WebSocketClient.swift
MobileGLM-iOS/MobileGLM/Video/: H264Decoder.swift  NALUParser.swift  VideoDisplayLayer.swift
MobileGLM-iOS/MobileGLM/Views/: ChatView.swift  PhoneDisplayView.swift
security/: __init__.py  image_filter.py  injection_detector.py
